# aws-mysql-odbc

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CreateBinaryMsi.bat  INFO_BIN.in  INFO_SRC.in  Install.bat.cmake  LICENSE.txt  MYODBC_MYSQL.h  MYODBC_ODBC.h  Maintenance.md  README.md  README.txt  THIRD-PARTY-LICENSES  build_installer.ps1  version.cmake
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: build-installer.yml  codebuild.yml  dockerized.yml  failover.yml  integration.yml  main.yml  performance.yml  pr_checks.yml  release.yml  remove-old-artifacts.yml
cmake/: FindMySQL.cmake
cmake/version_info/: version_info.rc.in
dltest/: dltest.c
docs/: Documentation.md  GettingStarted.md
docs/building-the-aws-driver/: BuildingAwsSdkCpp.md  BuildingTheAwsDriver.md
docs/testing-the-aws-driver/: TestingTheAwsDriver.md
docs/using-the-aws-driver/: ADFSAuthentication.md  AwsAuthentication.md  CustomEndpoint.md  FailoverConfigurationGuide.md  HostMonitoring.md  OktaAuthentication.md  UsingTheAwsDriver.md
driver/: CMakeLists.txt  adfs_proxy.cc  adfs_proxy.cpp  adfs_proxy.h  allowed_and_blocked_hosts.h  ansi.cc  auth_util.cc  auth_util.h  aws_sdk_helper.cc  aws_sdk_helper.h  base_metrics_holder.cc  base_metrics_holder.h  cache_map.cc  cache_map.h  catalog.cc  catalog.h  catalog_no_i_s.cc  cluster_aware_hit_metrics_holder.cc  cluster_aware_hit_metrics_holder.h  cluster_aware_metrics.cc  cluster_aware_metrics.h  cluster_aware_metrics_container.cc  cluster_aware_metrics_container.h  cluster_aware_time_metrics_holder.cc  cluster_aware_time_metrics_holder.h  cluster_topology_info.cc  cluster_topology_info.h  connect.cc  connect.h  connection.cc  connection.h  connection_handler.cc  connection_handler.h  connection_proxy.cc  connection_proxy.h  cursor.cc  custom_endpoint_info.cc  custom_endpoint_info.h  custom_endpoint_monitor.cc  custom_endpoint_monitor.h  (+68 more)
installer/: CMakeLists.txt  myodbc-installer.cc
integration/: CMakeLists.txt  base_failover_integration_test.cc  connection_string_builder.cc  connection_string_builder.h  connection_string_builder_test.cc  custom_endpoint_integration_test.cc  failover_integration_test.cc  failover_performance_test.cc  iam_authentication_integration_test.cc  integration_test_utils.cc  integration_test_utils.h  network_failover_integration_test.cc  secrets_manager_integration_test.cc  simple_connect_test.cc  simple_toxiproxy_test.cc
integration/toxiproxy/: CMakeLists.txt  bandwidth.cc  bandwidth.h  latency.cc  latency.h  limit_data.cc  limit_data.h  proxy.cc  proxy.h  reset_peer.cc  reset_peer.h  slicer.cc  slicer.h  slow_close.cc  slow_close.h  timeout.cc  timeout.h  toxic.cc  toxic.h  toxic_list.cc  toxic_list.h  toxic_type.cc  toxic_type.h  toxiproxy_client.cc  toxiproxy_client.h  toxiproxy_http_client.cc  toxiproxy_http_client.h
packaging/debian/: CMakeLists.txt  mysql-connector-odbc-setup.install.in  mysql-connector-odbc-setup.postinst.in  mysql-connector-odbc-setup.prerm.in  mysql-connector-odbc.install.in  mysql-connector-odbc.postinst.in  mysql-connector-odbc.prerm.in
packaging/mac/resources/: welcome.txt
scripts/: build_aws_sdk.ps1  build_aws_sdk_unix.sh  build_aws_sdk_win.ps1  sign_installer.ps1
scripts/macosx/: ReadMe.html.in  Welcome.html.in  postflight.in
setupgui/: CMakeLists.txt  ConfigDSN.cc  awsmysqlodbcS.def  callbacks.cc  setupgui.h  utils.cc
setupgui/gtk/: ODBCINSTGetProperties.cc  odbc.glade  odbcdialogparams.cc  setup_loader.cc  ui_xml.h  ui_xml_v2.h
setupgui/gtk/pixmaps/: aws_connector_odbc_header.xpm
setupgui/windows/: odbcdialogparams.cpp  odbcdialogparams.rc  resource.h  tooltip.cpp
test/: CMakeLists.txt  my_auth.c  my_auth.cc  my_basics.c  my_blob.c  my_bug13766.c  my_bulk.c  my_catalog1.c  my_catalog2.c  my_catalog3.cc  my_crash.c  my_curext.c  my_cursor.c  my_data.c  my_data.cc  my_datetime.c  my_desc.c  my_dyn_cursor.c  my_error.c  my_info.c  my_keys.c  my_options.cc  my_param.c  my_pooling.c  my_prepare.c  my_relative.c  my_result1.c  my_result2.c  my_scroll.c  my_setup.c  my_tran.c  my_types.c  my_unicode.c  my_unixodbc.c  my_use_result.c  odbc.ini.in  odbc_util.h  odbctap.h
test/docker/: docker-compose.yml
test/docker/docker-entrypoint-initdb.d/: lower_tls_min_version.sh
testframework/: build.gradle.kts
testframework/src/test/java/host/: IntegrationContainerTest.java
testframework/src/test/java/utility/: AuroraClusterInfo.java  AuroraTestUtility.java  ConsoleConsumer.java  ContainerHelper.java  (+1 more)
testframework/src/test/resources/: odbc.ini  odbcinst.ini
testing/: CMakeLists.txt  cluster_aware_metrics_test.cc  failover_handler_test.cc  failover_reader_handler_test.cc  failover_writer_handler_test.cc  hello_world_test.cc  main.cc  mock_objects.h  monitor_connection_context_test.cc  monitor_service_test.cc  monitor_test.cc  monitor_thread_container_test.cc  multi_threaded_monitor_service_test.cc  mysql_proxy_test.cc  query_parsing_test.cc  test_utils.cc  test_utils.h  topology_service_test.cc
unit_testing/: CMakeLists.txt  adfs_proxy_test.cc  cluster_aware_metrics_test.cc  custom_endpoint_monitor_test.cc  custom_endpoint_proxy_test.cc  efm_proxy_test.cc  failover_handler_test.cc  failover_reader_handler_test.cc  failover_writer_handler_test.cc  iam_proxy_test.cc  main.cc  mock_objects.h  monitor_connection_context_test.cc  monitor_service_test.cc  monitor_test.cc  monitor_thread_container_test.cc  multi_threaded_monitor_service_test.cc  okta_proxy_test.cc  secrets_manager_proxy_test.cc  sliding_expiration_cache_test.cc  test_utils.cc  test_utils.h  topology_service_test.cc
util/: CMakeLists.txt  install_drivers.ps1  installer.cc  installer.h  stringutil.cc  stringutil.h  uninstall_drivers.ps1
wix/: CMakeLists.txt  README.TXT  mysql-connector-odbc-msi-arpprops.wxs  mysql-connector-odbc-msi-arpprops.xml  mysql_common_ui.xml  mysql_odbc.wxs.in  mysql_odbc.xml.in  mysql_odbc_fragment.wxs  mysql_odbc_fragment.xml
wix/cmake/: FindWix.cmake  getodbcversion.c
